# RT2_assignment1

./: CMakeLists.txt  Doxyfile.in  Pioneer_CoppeliaSim.ttt  README.md  conf.py  index.rst  mapping_rules.yaml  package.xml  sim_start.sh  user_interface_notebook.ipynb
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  genindex.html  globals.html  globals_func.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  namespacego__to__point.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  objects.inv  pages.html  position__service_8cpp.html  position__service_8cpp__incl.map  py-modindex.html  search.html  searchindex.js  state__machine_8cpp.html  state__machine_8cpp__incl.map  state__machine_8cpp__incl.md5
_build/html/_modules/: index.html
_build/html/_sources/: index.rst.txt
_build/html/search/: all_8.js  all_9.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  searchdata.js
_build/latex/: files.tex  md__r_e_a_d_m_e.tex  namespacego__to__point.tex  namespaces.tex  position__service_8cpp.tex  position__service_8cpp__incl.md5  refman.tex  state__machine_8cpp.tex  state__machine_8cpp__incl.md5
_build/xml/: _c_make_lists_8txt.xml  _r_e_a_d_m_e_8md.xml  conf_8py.xml  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.xml  go__to__point_8py.xml  index.xml  md__r_e_a_d_m_e.xml  namespaceconf.xml  namespacego__to__point.xml  position__service_8cpp.xml  state__machine_8cpp.xml
docs/html/: dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  go__to__point_8py.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  pages.html  position__service_8cpp.html  position__service_8cpp__incl.md5  state__machine_8cpp.html
docs/html/search/: all_4.js  all_9.js  functions_0.js  (+9 more)
docs/latex/: files.tex  go__to__point_8py.tex  md__r_e_a_d_m_e.tex  position__service_8cpp.tex  refman.tex  state__machine_8cpp.tex
launch/: coppelia.launch  notebook.launch  ros2.py
notebook/: user_interface.ipynb
notebook/.ipynb_checkpoints/: user_interface-checkpoint.ipynb
scripts/: go_to_point.py  user_interface.py
src/: position_service.cpp  state_machine.cpp
srv/: Finish.srv
(+1 files in other folders)
